# api/controller/file_controller.go
@@ -30,7 +30,7 @@ func NewFileController(userService services.IUserService, fileHistoryService ser
 // @Description	upload file by user
 // @Tags file
 // @Accept mpfd
-// @Param workspace_id path int true "workspace id"
+// @Param workspace_id path string true "workspace id"
 // @Param filename formData string true "filename"
 // @Param size formData string true "file size"
 // @Param file formData file true "File to be uploaded"
@@ -39,6 +39,7 @@ func NewFileController(userService services.IUserService, fileHistoryService ser
 // @Failure 400 {object} response.ErrorResponse
 // @Failure 500 {object} response.ErrorResponse
 // @Router /workspace/{workspace_id}/file/create [post]
+// @Security Bearer
 func (c FileController) Create(context *gin.Context) {
 	var req request.CreateFileRequest
 
@@ -109,13 +110,14 @@ func (c FileController) Create(context *gin.Context) {
 // @Summary	get file download link
 // @Description	get file download link
 // @Tags file
-// @Param workspace_id path int true "workspace id"
-// @Param file_id path int true "file id"
+// @Param workspace_id path string true "workspace id"
+// @Param file_id path string true "file id"
 // @Produce json
 // @Success 200 {object} response.DownloadFileLinkResponse
 // @Failure 400 {object} response.ErrorResponse
 // @Failure 500 {object} response.ErrorResponse
 // @Router /workspace/{workspace_id}/file/{file_id}/get-file-download-link [get]
+// @Security Bearer
 func (c FileController) GetFileDownloadLink(context *gin.Context) {
 
 	fileID := context.Param("file_id")
@@ -142,13 +144,14 @@ func (c FileController) GetFileDownloadLink(context *gin.Context) {
 // @Summary	check filename existing
 // @Description	check filename existing
 // @Tags file
-// @Param workspace_id path int true "workspace id"
+// @Param workspace_id path string true "workspace id"
 // @Param filename query string true "checking filename"
 // @Produce json
 // @Success 200 {object} response.CheckFileResponse
 // @Failure 400 {object} response.ErrorResponse
 // @Failure 500 {object} response.ErrorResponse
 // @Router /workspace/{workspace_id}/file/check-filename-existing [get]
+// @Security Bearer
 func (c FileController) CheckFilenameExisting(context *gin.Context) {
 	filename := context.Query("filename")
 	if filename == "" {
