# docs/swagger.json
@@ -3,6 +3,7 @@
     "info": {
         "contact": {}
     },
+    "basePath": "/api/v1",
     "paths": {
         "/login": {
             "post": {
@@ -141,8 +142,44 @@
                 }
             }
         },
-        "/user/get-all-workspaces": {
+        "/user/profile": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "get user profile",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "get user profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/workspaces": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "get all user workspace (created and invited)",
                 "produces": [
                     "application/json"
@@ -175,34 +212,13 @@
                 }
             }
         },
-        "/user/profile": {
-            "get": {
-                "description": "get user profile",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "get user profile",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.ProfileResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/workspace/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "create workspace",
                 "produces": [
                     "application/json"
@@ -244,6 +260,11 @@
         },
         "/workspace/{workspace_id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "get workspace",
                 "produces": [
                     "application/json"
@@ -254,7 +275,7 @@
                 "summary": "get workspace",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "workspace_id",
                         "in": "path",
@@ -279,6 +300,11 @@
         },
         "/workspace/{workspace_id}/file-histories": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "get all files histories",
                 "produces": [
                     "application/json"
@@ -289,7 +315,7 @@
                 "summary": "get all files histories",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "workspace_id",
                         "in": "path",
@@ -300,7 +326,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.WorkspacesResponse"
+                            "$ref": "#/definitions/response.FileHistoriesResponse"
                         }
                     },
                     "400": {
@@ -314,6 +340,11 @@
         },
         "/workspace/{workspace_id}/file-history/{file_history_id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "get all file versions",
                 "produces": [
                     "application/json"
@@ -324,14 +355,14 @@
                 "summary": "get file history",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "workspace_id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "file_history_id",
                         "in": "path",
@@ -362,6 +393,11 @@
         },
         "/workspace/{workspace_id}/file/check-filename-existing": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "check filename existing",
                 "produces": [
                     "application/json"
@@ -372,7 +408,7 @@
                 "summary": "check filename existing",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "workspace_id",
                         "in": "path",
@@ -410,6 +446,11 @@
         },
         "/workspace/{workspace_id}/file/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "upload file by user",
                 "consumes": [
                     "multipart/form-data"
@@ -423,7 +464,7 @@
                 "summary": "create file",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "workspace_id",
                         "in": "path",
@@ -475,6 +516,11 @@
         },
         "/workspace/{workspace_id}/file/{file_id}/get-file-download-link": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "get file download link",
                 "produces": [
                     "application/json"
@@ -485,14 +531,14 @@
                 "summary": "get file download link",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "workspace id",
                         "name": "workspace_id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "file id",
                         "name": "file_id",
                         "in": "path",
@@ -544,6 +590,20 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "response.FileHistoriesResponse": {
+            "type": "object",
+            "properties": {
+                "file_histories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.FileHistoryResponse"
+                    }
+                },
+                "pagination": {
+                    "$ref": "#/definitions/response.PaginationResponse"
                 }
             }
         },
@@ -682,6 +742,14 @@
                     "$ref": "#/definitions/response.PaginationResponse"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
